--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "get-the-nini"
 version = "0.1.1"
-description = "Ninisite Post Scraper: Fetches all pages of a Ninisite discussion and formats in org-mode, Markdown, or JSON"
+description = "Ninisite Scraper: Fetches all pages of a Ninisite discussion and formats in org-mode, Markdown, or JSON"
 authors = ["Feraidoon <feraidoonmehri@gmail.com>"]
 readme = "README.org"
 packages = [{include = "get_the_nini"}]
